comment about pipelining in chain-sync, rework ascii diagrams, and fix diagrams being ugly on small devices.

--- a/docs/static/css/api-reference.css
+++ b/docs/static/css/api-reference.css
@@ -89,7 +89,7 @@ li.list-group-item.enum-item::before {
 }
 
 body {
-  background: #ff6b81;
+  background: #8451a1;
   color: #ffffff;
 }
 
